cleaning up the website

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Football Standings</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <style>
-        body {
-            padding-top: 40px;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        form {
-            margin-bottom: 30px;
-        }
-        .table-responsive {
-            max-width: 90%;
-            margin: 0 auto;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Football Standings</h1>
+        <h1 class="mt-5">Football Standings</h1>
 
         <!-- Form for League and Season Selection -->
         <form method="POST" class="row justify-content-center">
