adding the  learning model

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+    <li class="nav-item">
+        <a class="nav-link" href="/predict">Predict Match Outcome</a>
+    </li>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
